# time-series-mlops

./: .gitignore  Dockerfile  LICENSE  README.md  app.py  docker-compose.yaml  dvc.yaml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: main.yaml
airflow/: airflow.cfg  airflow.db  airflow.db-shm  airflow.db-wal  simple_auth_manager_passwords.json.generated
airflow/dags/: example_dag.py  main-mlops.py
artifacts/2025-04-11-14-23-52/data_ingestion/: feature_store.csv  test.csv  train.csv
data-pusher/: Dockerfile  push-to-db.py  requirements.txt
data_schema/: schema.yaml
mlruns/0/: meta.yaml
mlruns/0/0088ccb9845341eeb4936f5c4f14a73d/: meta.yaml
mlruns/0/083409ca073645ebb53fe577b81fdeac/: meta.yaml
mlruns/0/0f83d54a4339473c9a393d4141ee3521/: meta.yaml
mlruns/0/2db76f787b8b41ac8032cdac30923d9d/: meta.yaml
mlruns/0/4bcd9113ebf4479197f8600f421cdd74/: meta.yaml
mlruns/0/4f477c68295d42ed968546813e60c793/: meta.yaml
mlruns/0/7310797d6a8f421d98678ca95290bc37/: meta.yaml
notebook/: evidently_data_drift.ipynb  retail_sale.ipynb
src/Time_Series_Forecasting_Project.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/components/: data_ingetion.py  data_transformtion.py  data_validation.py  model_evaluate.py  model_training.py
src/entity/: artifact_entity.py  config_entity.py
src/exception/: exception.py
src/logging/: logger.py
src/pipeline/: data_ingestion_pipeline.py  data_transformation_pipeline.py  data_valid_pipeline.py  model_eval_pipeline.py  model_training_pipeline.py  training_pipeline.py
src/utils/: helper.py
(+127 files in other folders)
